Добавить функционал запросов и добавить в код тесты